added steps and functions

--- a/deploy/projects/flpids/deploy.py.org
+++ b/deploy/projects/flpids/deploy.py.org
@@ -2,63 +2,50 @@ from __future__ import annotations
 
 from dataclasses import dataclass
 from pathlib import Path
-from typing import Any, Dict, List, Tuple
+from typing import Any, Dict, List, Optional, Tuple
 
 import boto3
 
 from common.aws_common import (
+    ensure_bucket_exists,
     ensure_lambda,
-    ensure_state_machine,
     LambdaSpec,
-    StateMachineSpec,
-)
-
-from .stepfunctions.fpac_stepfunctions import (
-    FsaFileChecksStateMachineBuilder,
-    FsaFileChecksStateMachineInputs,
 )
 
 
 @dataclass(frozen=True)
 class FpacNames:
     project_name: str
-
-    # existing lambdas
     checkfile_fn: str
     filechecker2_fn: str
-    testfileloader_fn: str
+    testfileloader_fn: str 
     dynacheckfile_fn: str
-
-    # new lambdas
-    setrunning_fn: str
-    transferfile_fn: str
-    finalizejob_fn: str
-
-    # new state machine
-    sm_filechecks: str
 
 
 def build_names(deploy_env: str, project: str) -> FpacNames:
+    """
+    Centralized FPAC naming to match CDK exactly
+    """
     project_name = f"Fpac{project.upper()}"
     base = f"FSA-{deploy_env}-{project_name}"
 
     return FpacNames(
         project_name=project_name,
-
         checkfile_fn=f"{base}-CheckFile",
         filechecker2_fn=f"{base}-FileChecker2",
         testfileloader_fn=f"{base}-TestFileLoader",
         dynacheckfile_fn=f"{base}-DynaCheckFile",
-
-        setrunning_fn=f"{base}-SetRunning",
-        transferfile_fn=f"{base}-TransferFile",
-        finalizejob_fn=f"{base}-FinalizeJob",
-
-        sm_filechecks=f"{base}-FileChecks",
     )
 
 
 def parse_networking(cfg: Dict[str, Any]) -> Tuple[List[str], List[str]]:
+    """
+    Returns (subnet_ids, security_group_ids).
+
+    - If networking is missing/empty/invalid/incomplete -> returns ([], [])
+      which means "force detach from VPC".
+    - If both subnetIds and securityGroupIds are present -> returns populated lists.
+    """
     net = cfg.get("networking") or {}
     if not isinstance(net, dict) or not net:
         return ([], [])
@@ -74,6 +61,7 @@ def parse_networking(cfg: Dict[str, Any]) -> Tuple[List[str], List[str]]:
     subnet_ids = [s.strip() for s in subnet_ids if isinstance(s, str) and s.strip()]
     sg_ids = [s.strip() for s in sg_ids if isinstance(s, str) and s.strip()]
 
+    # If one is missing, treat as "detach" to be safe and deterministic
     if not (subnet_ids and sg_ids):
         return ([], [])
 
@@ -87,6 +75,11 @@ def deploy(cfg: Dict[str, Any], region: str) -> Dict[str, str]:
     bucket_region = cfg.get("bucketRegion", region)
 
     landing_bucket_name = cfg["strparams"]["landingBucketNameParam"]
+    # kept for parity / future use
+    _clean_bucket_name = cfg["strparams"]["cleanBucketNameParam"]
+    _final_bucket_name = cfg["strparams"]["finalBucketNameParam"]
+
+    _glue_job_role_arn = cfg["strparams"]["glueJobRoleArnParam"]
     etl_lambda_role_arn = cfg["strparams"]["etlRoleArnParam"]
 
     layers = [
@@ -94,16 +87,22 @@ def deploy(cfg: Dict[str, Any], region: str) -> Dict[str, str]:
         cfg["strparams"]["customLayerArnParam"],
     ]
 
+    artifact_bucket = cfg["artifacts"]["artifactBucket"]
+    _prefix = cfg["artifacts"]["prefix"].rstrip("/") + "/"
+
     names = build_names(deploy_env, project)
 
-    project_dir = Path(__file__).resolve().parent
+    project_dir = Path(__file__).resolve().parent  # .../projects/fpac_pipeline
     lambda_root = project_dir / "lambda"
 
+    # ✅ Deterministic networking: either in-VPC with both lists, or detach with []
     subnet_ids, security_group_ids = parse_networking(cfg)
 
     session = boto3.Session(region_name=region)
+    s3 = session.client("s3")
     lam = session.client("lambda")
-    sfn = session.client("stepfunctions")
+
+  #  ensure_bucket_exists(s3, artifact_bucket, region)
 
     env_vars = {
         "PROJECT": project,
@@ -112,7 +111,6 @@ def deploy(cfg: Dict[str, Any], region: str) -> Dict[str, str]:
         "BUCKET_REGION": bucket_region,
     }
 
-    # ---- existing lambdas ----
     checkfile_arn = ensure_lambda(
         lam,
         LambdaSpec(
@@ -173,82 +171,9 @@ def deploy(cfg: Dict[str, Any], region: str) -> Dict[str, str]:
         ),
     )
 
-    # ---- NEW lambdas ----
-    setrunning_arn = ensure_lambda(
-        lam,
-        LambdaSpec(
-            name=names.setrunning_fn,
-            role_arn=etl_lambda_role_arn,
-            handler="lambda_function.lambda_handler",
-            runtime="python3.12",
-            source_dir=str(lambda_root / "SetRunning"),
-            env=env_vars,
-            layers=layers,
-            subnet_ids=subnet_ids,
-            security_group_ids=security_group_ids,
-        ),
-    )
-
-    transferfile_arn = ensure_lambda(
-        lam,
-        LambdaSpec(
-            name=names.transferfile_fn,
-            role_arn=etl_lambda_role_arn,
-            handler="lambda_function.lambda_handler",
-            runtime="python3.12",
-            source_dir=str(lambda_root / "TransferFile"),
-            env=env_vars,
-            layers=layers,
-            subnet_ids=subnet_ids,
-            security_group_ids=security_group_ids,
-        ),
-    )
-
-    finalizejob_arn = ensure_lambda(
-        lam,
-        LambdaSpec(
-            name=names.finalizejob_fn,
-            role_arn=etl_lambda_role_arn,
-            handler="lambda_function.lambda_handler",
-            runtime="python3.12",
-            source_dir=str(lambda_root / "FinalizeJob"),
-            env=env_vars,
-            layers=layers,
-            subnet_ids=subnet_ids,
-            security_group_ids=security_group_ids,
-        ),
-    )
-
-    # ---- Step Functions (Pattern A) ----
-    sfn_role_arn = (cfg.get("stepFunctions", {}) or {}).get("roleArn") or ""
-    if not sfn_role_arn:
-        raise RuntimeError("stepFunctions.roleArn is empty. (Role creation not implemented here.)")
-
-    sm_inputs = FsaFileChecksStateMachineInputs(
-        set_running_lambda_arn=setrunning_arn,
-        transfer_file_lambda_arn=transferfile_arn,
-        finalize_job_lambda_arn=finalizejob_arn,
-    )
-    sm_def = FsaFileChecksStateMachineBuilder.filechecks_asl(sm_inputs)
-
-    filechecks_sm_arn = ensure_state_machine(
-        sfn,
-        StateMachineSpec(
-            name=names.sm_filechecks,
-            role_arn=sfn_role_arn,
-            definition=sm_def,
-        ),
-    )
-
     return {
         "checkfile_lambda_arn": checkfile_arn,
         "filechecker2_lambda_arn": filechecker2_arn,
         "testfileloader_lambda_arn": testfileloader_arn,
         "dynacheckfile_lambda_arn": dynacheckfile_arn,
-
-        "setrunning_lambda_arn": setrunning_arn,
-        "transferfile_lambda_arn": transferfile_arn,
-        "finalizejob_lambda_arn": finalizejob_arn,
-
-        "filechecks_state_machine_arn": filechecks_sm_arn,
     }
