updates for flpids data

--- a/deploy/projects/flpids/deploy.py.org
+++ b/deploy/projects/flpids/deploy.py.org
@@ -2,50 +2,66 @@ from __future__ import annotations
 
 from dataclasses import dataclass
 from pathlib import Path
-from typing import Any, Dict, List, Optional, Tuple
+from typing import Any, Dict, List, Tuple
 
 import boto3
 
 from common.aws_common import (
-    ensure_bucket_exists,
     ensure_lambda,
+    ensure_state_machine,
     LambdaSpec,
+    StateMachineSpec,
+)
+
+from .stepfunctions.fpac_stepfunctions import (
+    FsaFileChecksStateMachineBuilder,
+    FsaFileChecksStateMachineInputs,
 )
 
 
 @dataclass(frozen=True)
 class FpacNames:
     project_name: str
+
+    # existing lambdas
     checkfile_fn: str
-    filechecker2_fn: str
-    testfileloader_fn: str 
+    testfileloader_fn: str
     dynacheckfile_fn: str
+    checkfilenotsecure_fn: str
+    realjobname_fn: str
+
+    # stream trigger lambda
+    streamstartfilechecks_fn: str
+
+    # state-machine lambdas
+    setrunning_fn: str
+    transferfile_fn: str
+    finalizejob_fn: str
+
+    # state machine
+    sm_filechecks: str
 
 
 def build_names(deploy_env: str, project: str) -> FpacNames:
-    """
-    Centralized FPAC naming to match CDK exactly
-    """
     project_name = f"Fpac{project.upper()}"
     base = f"FSA-{deploy_env}-{project_name}"
 
     return FpacNames(
         project_name=project_name,
         checkfile_fn=f"{base}-CheckFile",
-        filechecker2_fn=f"{base}-FileChecker2",
         testfileloader_fn=f"{base}-TestFileLoader",
         dynacheckfile_fn=f"{base}-DynaCheckFile",
+        checkfilenotsecure_fn=f"{base}-CheckFileNotSecure",
+        realjobname_fn=f"{base}-RealJobName",
+        streamstartfilechecks_fn=f"{base}-StreamStartFileChecks",
+        setrunning_fn=f"{base}-SetRunning",
+        transferfile_fn=f"{base}-TransferFile",
+        finalizejob_fn=f"{base}-FinalizeJob",
+        sm_filechecks=f"{base}-FileChecks",
     )
 
 
 def parse_networking(cfg: Dict[str, Any]) -> Tuple[List[str], List[str]]:
-    """
-    Returns (subnet_ids, security_group_ids).
-
-    - If networking is missing/empty/invalid/incomplete -> returns ([], [])
-      which means "force detach from VPC".
-    - If both subnetIds and securityGroupIds are present -> returns populated lists.
-    """
     net = cfg.get("networking") or {}
     if not isinstance(net, dict) or not net:
         return ([], [])
@@ -61,7 +77,6 @@ def parse_networking(cfg: Dict[str, Any]) -> Tuple[List[str], List[str]]:
     subnet_ids = [s.strip() for s in subnet_ids if isinstance(s, str) and s.strip()]
     sg_ids = [s.strip() for s in sg_ids if isinstance(s, str) and s.strip()]
 
-    # If one is missing, treat as "detach" to be safe and deterministic
     if not (subnet_ids and sg_ids):
         return ([], [])
 
@@ -74,12 +89,12 @@ def deploy(cfg: Dict[str, Any], region: str) -> Dict[str, str]:
     config_data = cfg["configData"]
     bucket_region = cfg.get("bucketRegion", region)
 
-    landing_bucket_name = cfg["strparams"]["landingBucketNameParam"]
-    # kept for parity / future use
-    _clean_bucket_name = cfg["strparams"]["cleanBucketNameParam"]
-    _final_bucket_name = cfg["strparams"]["finalBucketNameParam"]
+    # Canonical DynamoDB table name for all lambdas (including StreamStartFileChecks)
+    dynamo_table_name = config_data["dynamoTableName"]
 
-    _glue_job_role_arn = cfg["strparams"]["glueJobRoleArnParam"]
+    # From config: this is the *actual* bucket name string in your json
+    landing_bucket_name = cfg["strparams"]["landingBucketNameParam"]
+
     etl_lambda_role_arn = cfg["strparams"]["etlRoleArnParam"]
 
     layers = [
@@ -87,30 +102,29 @@ def deploy(cfg: Dict[str, Any], region: str) -> Dict[str, str]:
         cfg["strparams"]["customLayerArnParam"],
     ]
 
-    artifact_bucket = cfg["artifacts"]["artifactBucket"]
-    _prefix = cfg["artifacts"]["prefix"].rstrip("/") + "/"
-
     names = build_names(deploy_env, project)
 
-    project_dir = Path(__file__).resolve().parent  # .../projects/fpac_pipeline
+    project_dir = Path(__file__).resolve().parent
     lambda_root = project_dir / "lambda"
 
-    # ✅ Deterministic networking: either in-VPC with both lists, or detach with []
     subnet_ids, security_group_ids = parse_networking(cfg)
 
     session = boto3.Session(region_name=region)
-    s3 = session.client("s3")
     lam = session.client("lambda")
+    sfn = session.client("stepfunctions")
 
-  #  ensure_bucket_exists(s3, artifact_bucket, region)
-
-    env_vars = {
+    # ✅ Shared env across ALL lambdas.
+    # IMPORTANT:
+    # - LANDING_BUCKET is the canonical bucket source per your config.
+    # - TransferFile (and others) should look at LANDING_BUCKET as fallback.
+    base_env = {
         "PROJECT": project,
         "LANDING_BUCKET": landing_bucket_name,
-        "TABLE_NAME": config_data["dynamoTableName"],
+        "TABLE_NAME": dynamo_table_name,
         "BUCKET_REGION": bucket_region,
     }
 
+    # ---- existing lambdas ----
     checkfile_arn = ensure_lambda(
         lam,
         LambdaSpec(
@@ -119,22 +133,7 @@ def deploy(cfg: Dict[str, Any], region: str) -> Dict[str, str]:
             handler="lambda_function.lambda_handler",
             runtime="python3.12",
             source_dir=str(lambda_root / "CheckFile"),
-            env=env_vars,
-            layers=layers,
-            subnet_ids=subnet_ids,
-            security_group_ids=security_group_ids,
-        ),
-    )
-
-    filechecker2_arn = ensure_lambda(
-        lam,
-        LambdaSpec(
-            name=names.filechecker2_fn,
-            role_arn=etl_lambda_role_arn,
-            handler="lambda_function.lambda_handler",
-            runtime="python3.12",
-            source_dir=str(lambda_root / "FileChecker2"),
-            env=env_vars,
+            env=base_env,
             layers=layers,
             subnet_ids=subnet_ids,
             security_group_ids=security_group_ids,
@@ -149,7 +148,7 @@ def deploy(cfg: Dict[str, Any], region: str) -> Dict[str, str]:
             handler="lambda_function.lambda_handler",
             runtime="python3.12",
             source_dir=str(lambda_root / "TestFileLoader"),
-            env=env_vars,
+            env=base_env,
             layers=layers,
             subnet_ids=subnet_ids,
             security_group_ids=security_group_ids,
@@ -164,7 +163,131 @@ def deploy(cfg: Dict[str, Any], region: str) -> Dict[str, str]:
             handler="lambda_function.lambda_handler",
             runtime="python3.12",
             source_dir=str(lambda_root / "DynaCheckFile"),
-            env=env_vars,
+            env=base_env,
+            layers=layers,
+            subnet_ids=subnet_ids,
+            security_group_ids=security_group_ids,
+        ),
+    )
+
+    checkfilenotsecure_arn = ensure_lambda(
+        lam,
+        LambdaSpec(
+            name=names.checkfilenotsecure_fn,
+            role_arn=etl_lambda_role_arn,
+            handler="lambda_function.lambda_handler",
+            runtime="python3.12",
+            source_dir=str(lambda_root / "CheckFileNotSecure"),
+            env=base_env,
+            layers=layers,
+            subnet_ids=subnet_ids,
+            security_group_ids=security_group_ids,
+        ),
+    )
+
+    # ---- lambdas used by state machine ----
+    setrunning_arn = ensure_lambda(
+        lam,
+        LambdaSpec(
+            name=names.setrunning_fn,
+            role_arn=etl_lambda_role_arn,
+            handler="lambda_function.lambda_handler",
+            runtime="python3.12",
+            source_dir=str(lambda_root / "SetRunning"),
+            env=base_env,
+            layers=layers,
+            subnet_ids=subnet_ids,
+            security_group_ids=security_group_ids,
+        ),
+    )
+
+    transferfile_arn = ensure_lambda(
+        lam,
+        LambdaSpec(
+            name=names.transferfile_fn,
+            role_arn=etl_lambda_role_arn,
+            handler="lambda_function.lambda_handler",
+            runtime="python3.12",
+            source_dir=str(lambda_root / "TransferFile"),
+            env=base_env,  # ✅ includes LANDING_BUCKET + TABLE_NAME
+            layers=layers,
+            subnet_ids=subnet_ids,
+            security_group_ids=security_group_ids,
+        ),
+    )
+
+    finalizejob_arn = ensure_lambda(
+        lam,
+        LambdaSpec(
+            name=names.finalizejob_fn,
+            role_arn=etl_lambda_role_arn,
+            handler="lambda_function.lambda_handler",
+            runtime="python3.12",
+            source_dir=str(lambda_root / "FinalizeJob"),
+            env=base_env,
+            layers=layers,
+            subnet_ids=subnet_ids,
+            security_group_ids=security_group_ids,
+        ),
+    )
+
+    realjobname_arn = ensure_lambda(
+        lam,
+        LambdaSpec(
+            name=names.realjobname_fn,
+            role_arn=etl_lambda_role_arn,
+            handler="lambda_function.lambda_handler",
+            runtime="python3.12",
+            source_dir=str(lambda_root / "RealJobName"),
+            env=base_env,
+            layers=layers,
+            subnet_ids=subnet_ids,
+            security_group_ids=security_group_ids,
+        ),
+    )
+
+    # ---- deploy state machine ----
+    sfn_role_arn = (cfg.get("stepFunctions", {}) or {}).get("roleArn") or ""
+    if not sfn_role_arn:
+        raise RuntimeError("stepFunctions.roleArn is empty. (Role creation not implemented here.)")
+
+    sm_inputs = FsaFileChecksStateMachineInputs(
+        set_running_lambda_arn=setrunning_arn,
+        transfer_file_lambda_arn=transferfile_arn,
+        finalize_job_lambda_arn=finalizejob_arn,
+    )
+    sm_def = FsaFileChecksStateMachineBuilder.filechecks_asl(sm_inputs)
+
+    filechecks_sm_arn = ensure_state_machine(
+        sfn,
+        StateMachineSpec(
+            name=names.sm_filechecks,
+            role_arn=sfn_role_arn,
+            definition=sm_def,
+        ),
+    )
+
+    # ---- deploy stream trigger lambda LAST (needs the SM ARN) ----
+    stream_env = {
+        **base_env,
+        "STATE_MACHINE_ARN": filechecks_sm_arn,
+        # Optional behavior knobs (enable if desired):
+        # "ENABLE_LOCK": "true",
+        # "LOCK_STATUS_VALUE": "QUEUED",
+        # "DEFAULT_TIMEOUT_SECONDS": "120",
+        # "DEFAULT_VERIFY_TLS": "false",
+        # "DEFAULT_DEBUG": "false",
+    }
+
+    streamstartfilechecks_arn = ensure_lambda(
+        lam,
+        LambdaSpec(
+            name=names.streamstartfilechecks_fn,
+            role_arn=etl_lambda_role_arn,
+            handler="lambda_function.lambda_handler",
+            runtime="python3.12",
+            source_dir=str(lambda_root / "StreamStartFileChecks"),
+            env=stream_env,
             layers=layers,
             subnet_ids=subnet_ids,
             security_group_ids=security_group_ids,
@@ -173,7 +296,15 @@ def deploy(cfg: Dict[str, Any], region: str) -> Dict[str, str]:
 
     return {
         "checkfile_lambda_arn": checkfile_arn,
-        "filechecker2_lambda_arn": filechecker2_arn,
         "testfileloader_lambda_arn": testfileloader_arn,
         "dynacheckfile_lambda_arn": dynacheckfile_arn,
+        "checkfilenotsecure_lambda_arn": checkfilenotsecure_arn,
+
+        "setrunning_lambda_arn": setrunning_arn,
+        "transferfile_lambda_arn": transferfile_arn,
+        "finalizejob_lambda_arn": finalizejob_arn,
+
+        "filechecks_state_machine_arn": filechecks_sm_arn,
+        "streamstartfilechecks_lambda_arn": streamstartfilechecks_arn,
+        "realjobname_lambda_arn": realjobname_arn,
     }
